<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
                  xmlns:settings="http://schemas.android.com/apk/res-auto"
                  android:title="@string/RealmeParts">

    <PreferenceCategory
        android:title="@string/ambient_display_title">

        <PreferenceScreen
                android:key="doze"
                android:icon="@drawable/ambient_mode_icon"
                android:summary="@string/ambient_display_gestures_summary"
                android:title="@string/ambient_display_gestures_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/vibrator_intensity_control">

        <org.aospextended.device.vibration.VibratorStrengthPreference
	    android:key="vib_strength"
            android:icon="@drawable/ic_vibrate" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="graphics"
        android:title="@string/display_title">

        <SwitchPreference
            android:key="dc"
            android:icon="@drawable/dc_mode_icon"
            android:summary="@string/dc_mode_summary"
            android:title="@string/dc_mode_title" />

        <SwitchPreference
            android:key="hbm"
            android:icon="@drawable/hbm_mode_icon"
            android:summary="@string/hbm_mode_summary"
            android:title="@string/hbm_mode_title"
            android:defaultValue="false" />

        <SwitchPreference
            android:key="srgb"
            android:icon="@drawable/srgb_mode_icon"
            android:summary="@string/srgb_mode_summary"
            android:title="@string/srgb_mode_title" />

        <SwitchPreference
            android:key="game"
            android:icon="@drawable/game_mode_icon"
            android:summary="@string/game_mode_summary"
            android:title="@string/game_mode_title" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="misc"
        android:title="@string/misc_title">

        <SwitchPreference
            android:key="otg"
            android:icon="@drawable/usb_otg_icon"
            android:summary="@string/otg_mode_summary"
            android:title="@string/otg_mode_title" />
    </PreferenceCategory>

</PreferenceScreen>
